--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>bolt-expo-nativewind</title>
+    <title>comunidad-unid</title>
     <!-- The `react-native-web` recommended style reset: https://necolas.github.io/react-native-web/docs/setup/#root-element -->
     <style id="expo-reset">
       /* These styles make the body full-height */
@@ -32,6 +32,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="/_expo/static/js/web/entry-08a68152d68b7baa8c9a6b623974e451.js" defer></script>
+  <script src="/_expo/static/js/web/entry-e718de0dfaa527f5c8cfe3a5c7831728.js" defer></script>
 </body>
 </html>
